# Tarea1-C31886-C03361

./: README.md  pyproject.toml
doc/: index.md
src/tarea1/: __init__.py  abbpunteros.py  abbvectorheap.py  arreglo.py  funcion.py  listaordenadadinamica.py  listaordenadaestatica.py  tablahashabierta.py  triearreglos.py  triepunteros.py
test/: test_listaordenadadinamica.py  test_listaordenadaestatica.py  test_tablahashabierta.py
