[project]
name = "tarea1-c31886-c03361"
version = "0.1.0"
description = "Primera etapa de la primera tarea programada del curso CI-0116"
readme = "README.md"
authors = [
    { name = "Marina Castro C31886", email = "marina.castro@ucr.ac.cr" },
    { name = "Emanuel Gonzalez C03361", email = "emanuel.gonzalezchaves@ucr.ac.cr" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=14.1.0",
]

[project.scripts]
tarea1 = "tarea1:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
